Bug 152961 - UI frozen on opening ODT, stuck on legacy.tools lngprophelp.cxx warning
Summary: UI frozen on opening ODT, stuck on legacy.tools lngprophelp.cxx warning
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.1 rc
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.6.0 target:7.5.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Layout-Loops, Writer-Loops
  Show dependency treegraph
 
Reported: 2023-01-10 11:05 UTC by Stéphane Guillou (stragu)
Modified: 2023-01-13 13:55 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stéphane Guillou (stragu) 2023-01-10 11:05:38 UTC
An ODT file from a different bug report freezes the LO UI on opening it.

Steps:
1. Open attachment 179857 [details]

Results: Document displayed but the LO UI is frozen.
With a debug build up to commit 12e8d57e791bb1befc0716d4d02af7d1d1ccb4ae, I get this warning repeated infinitely:

warn:legacy.tools:46315:46315:linguistic/source/lngprophelp.cxx:632: unknown property

This happens with both GTK and GEN VCLs, and on Windows 10 too.

Reproduced since 7.5:

Version: 7.5.0.1 (X86_64) / LibreOffice Community
Build ID: 77cd3d7ad4445740a0c6cf977992dafd8ebad8df
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

On Windows 10:
Version: 7.5.0.1 (X86_64) / LibreOffice Community
Build ID: 77cd3d7ad4445740a0c6cf977992dafd8ebad8df
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-GB (en_GB); UI: en-GB
Calc: threaded

Also in a master build from today:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 894efac210a3871214d95a52c322b0bee40f00ba
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Not reproduced in 7.4:

Version: 7.4.3.2 / LibreOffice Community
Build ID: 1048a8393ae2eeec98dff31b5c133c5f1d08b890
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 1 BogdanB 2023-01-10 11:24:10 UTC
Confirm it with
Version: 7.5.0.1 (X86_64) / LibreOffice Community
Build ID: 77cd3d7ad4445740a0c6cf977992dafd8ebad8df
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: ro-RO (ro_RO); UI: en-US
Calc: threaded

Document is visbile but LibreOffice not responding.
Comment 2 Stéphane Guillou (stragu) 2023-01-10 11:30:47 UTC
Bibisected with linux-64-7.5 repo to first bad commit 18f259482782a3b3c44e01ca6ea0e98fe00973a0, which is a cherry-pick of:

commit cf2c070de2bafeec3b476c6bff7bb4ac87ba46db
author	Miklos Vajna <vmiklos@collabora.com>	Fri Dec 09 16:52:48 2022 +0100
committer	Miklos Vajna <vmiklos@collabora.com>	Fri Dec 09 18:08:59 2022 +0000
tree be0fb5eead094f07e715caa12a08ff01a9e9bc6d
parent 31084ebb59093be7dfe5ab53a20fdb3bcfde34b6
sw layout: invalidate margins of body content when moving a fly from page
[...]
This appears to be a regression from commit b9ef71476fd70bc13f50ebe80390e0730d1b7afb (tdf#134298 sw: layout: remove
left-over page frame without content, 2020-11-13).
Change-Id: I0424d9eea4d8a030959f8534985950c7efad4686
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143881

Miklos, could you please have a look? Thank you!
Comment 3 Commit Notification 2023-01-12 10:22:22 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/432aefa738ed0b3a6215629569a5bcffdeb504d5

tdf#152961 sw: fix layout loop on removing fly from page

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Stéphane Guillou (stragu) 2023-01-13 09:03:13 UTC
Fix verified in:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 197e5f81213d14fdcbff40edf73385ecd4cd9815
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thank you Bogdan and Miklos!
Comment 5 Commit Notification 2023-01-13 13:55:02 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/57d1de08dee74b691b8686c8b35f3e61257b8107

tdf#152961 sw: fix layout loop on removing fly from page

It will be available in 7.5.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.